--- a/web/director/ver-anteproyecto.xhtml
+++ b/web/director/ver-anteproyecto.xhtml
@@ -120,7 +120,7 @@
                                 </p:row>
                                 <p:row>
                                     <p:column colspan="2" >
-                                        <p:button value="Volver"  icon="ui-icon-arrowthick-1-w" style="margin-top: 20px;"/>
+                                        <p:button value="Volver"  outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="margin-top: 20px;"/>
                                     </p:column>
                                 </p:row>
 
