--- a/web/estudiante/editar-anteproyecto.xhtml
+++ b/web/estudiante/editar-anteproyecto.xhtml
@@ -29,7 +29,7 @@
                         <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
                         <p:menuitem value="Estudiante" outcome="vista-estudiante" />
                         <p:menuitem value="Fases del Trabajo de Grado" outcome="vista-estudiante" />
-                        <p:menuitem value="2. Realización del Anteproyecto" outcome="vista-estudiante" />
+                        <p:menuitem value="2. Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" />
                         <p:menuitem value="Editar Anteproyecto" outcome="vista-estudiante" />
                     </p:breadCrumb>              
                 </h:form>
@@ -127,7 +127,7 @@
                                 </p:row>
                                 <p:row>
                                     <p:column >
-                                        <p:button value="Cancelar"  icon="ui-icon-cancel" style="margin-top: 20px;"/>
+                                        <p:button outcome="2-realizacion-anteproyecto" value="Cancelar"  icon="ui-icon-cancel" style="margin-top: 20px;"/>
                                     </p:column>
                                     <p:column>
                                         <p:commandButton value="Editar" ajax="false" actionListener="#{anteproyecto.editar}" style="margin-top: 20px;"/>
