--- a/web/estudiante/vista-estudiante.xhtml
+++ b/web/estudiante/vista-estudiante.xhtml
@@ -29,6 +29,7 @@
                 #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
                 #{trabajodegradoController.incializar()}                
                 #{estudianteViewController.loadTrabajoDeGrado()}
+                #{formatoA.setTrabajoid(estudianteViewController.entityTrabajo.trabajoid)}
                 <h:form id="fases">                                                           
 
                     <p:menu styleClass="menuizqroles" style="background-color: white">
